Minor fixes and update Tests